<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg1">

    <!-- ImageView with Constraint Layout -->
    <ImageView
        android:id="@+id/RegIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/user_reg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons" />

    <!-- LinearLayout for buttons -->
    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RegIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp">

        <!-- Register Button -->
        <Button
            android:id="@+id/buttonRegister"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <!-- View Data Button -->
        <Button
            android:id="@+id/buttonViewData"
            android:text="@string/view_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
